# deluge-controller-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dbt.cmd  dbt.py  linker_script_rz_a1l.ld
.github/workflows/: asio.yml  ci.yml  firmware.yml
asio-driver/: .gitignore  CMakeLists.txt  README.md  register.cmd  unregister.cmd
asio-driver/src/: DelugeASIO.def  asio_driver.cpp  asio_driver.h  deluge_usb.h  dll_main.cpp  usb_transport.cpp  usb_transport.h
asio-driver/test/: asio_test.cpp
examples/host-demo/: Cargo.toml  README.md
examples/host-demo-python/: README.md  deluge.py  demo.py
examples/host-demo/src/: deluge.rs  main.rs
lib/: CMakeLists.txt
rust/: Cargo.toml  bench-fft.sh  rust-toolchain.toml  rza1_debug.JLinkScript
rust/.cargo/: config.toml
rust/cmsis-dsp/: Cargo.toml  build.rs
rust/cmsis-dsp-sys/: Cargo.toml  build.rs  wrapper.h
rust/cmsis-dsp-sys/src/: lib.rs
rust/cmsis-dsp/src/: error.rs  fft.rs  lib.rs  math.rs  stats.rs
rust/deluge-bsp/: Cargo.toml  build.rs  test.ld
rust/deluge-bsp/src/: audio.rs  cv_gate.rs  fat.rs  lib.rs  midi_gate.rs  oled.rs  pic.rs  scux_dvu_path.rs  scux_src_path.rs  sd.rs  sdram.rs  startup.rs  system.rs  uart.rs
rust/deluge-bsp/src/usb/: driver.rs  fifo.rs  host.rs  mod.rs  pipe.rs  regs.rs
rust/deluge-bsp/src/usb/classes/: audio.rs  mod.rs
rust/deluge-bsp/tests/: gpio.rs  sdram.rs  time_driver.rs
rust/deluge-fft/: Cargo.toml
rust/deluge-fft/benches/: fft_bench.rs
rust/deluge-fft/src/: arch.rs  buf.rs  complex.rs  fft.rs  lib.rs  radix4.rs  radix8.rs  real_fft.rs  spectrum.rs  test_utils.rs  tests.rs  trig.rs  twiddle.rs
rust/deluge-hw-tests/: Cargo.toml  build.rs
rust/deluge-hw-tests/src/: main.rs
rust/deluge-test/: Cargo.toml
rust/deluge-test-runner/: Cargo.toml
rust/deluge-test-runner/.cargo/: config.toml
rust/deluge-test-runner/src/: main.rs
rust/deluge-test/src/: lib.rs
rust/firmware/: Cargo.toml  build.rs  linker.ld
rust/firmware/src/: events.rs  main.rs  pads.rs  startup.rs
rust/firmware/src/tasks/: analysis.rs  audio.rs  blink.rs  cdc.rs  encoder.rs  jack_detect.rs  midi.rs  mod.rs  oled.rs  pic.rs  rgb.rs  sd.rs  usb.rs  usb_host.rs
rust/rza1/: Cargo.toml  build.rs  test.ld
rust/rza1/examples/: ostm-smoke.rs
rust/rza1/src/: allocator.rs  bsc.rs  cache.rs  dmac.rs  gic.rs  gpio.rs  lib.rs  mmu.rs  mtu2.rs  ostm.rs  rspi.rs  rusb1.rs  scux.rs  sdhi.rs  sdram.rs  ssi.rs  startup.rs  stb.rs  time_driver.rs  uart.rs
rust/rza1/tests/: gic.rs  ostm.rs
rust/rza1l-hal/: Cargo.toml  README.md
rust/rza1l-hal/src/: cache.rs  dmac.rs  gpio.rs  lib.rs  mmu.rs  mtu2.rs  rspi.rs  rusb1.rs  scux.rs  sdhi.rs  ssi.rs  startup.rs  stb.rs  time_driver.rs  uart.rs
scripts/: __init__.py
scripts/cmake/: CMakeToolchainDeluge.cmake
scripts/tasks/: task-loadfw.py  task-midi-loopback.py
scripts/toolchain/: dbtenv.sh  requirements.txt
src/: CMakeLists.txt  definitions.h  definitions_cxx.hpp
src/RTT/: CMakeLists.txt
src/RZA1/: CMakeLists.txt  cpu_specific.h
src/RZA1/intc/: intc_handler.c
src/RZA1/mtu/: mtu.h
src/RZA1/rspi/: rspi.h
src/RZA1/ssi/: ssi.c
src/RZA1/uart/: sio_char.c  sio_char.h
src/RZA1/usb/r_usb_basic/src/driver/: r_usb_usbif_api.c
src/RZA1/usb/r_usb_basic/src/hw/: r_usb_rz_mcu.c
src/controller/: CMakeLists.txt  controller.cpp  controller.h  controller_util.h  display_control.cpp  display_control.h  hardware_events.cpp  hardware_events.h  oled_init.c  tusb_config.h  usb_audio.cpp  usb_audio.h  usb_descriptors.c  usb_descriptors.h  usb_midi.c  usb_midi.h  usb_serial.cpp  usb_serial.h
src/drivers/: CMakeLists.txt
src/drivers/oled/: oled.c  oled.h  oled_low_level.c
src/drivers/pic/: pic.h
src/drivers/ssi/: ssi.c  ssi.h
src/drivers/uart/: uart.c
src/platform/: CMakeLists.txt
src/platform/fault_handler/: fault_handler.c
src/platform/timers_interrupts/: timers_interrupts.c
src/startup/: CMakeLists.txt  main.c  resetprg.c  sys_stubs.c  terminate.cpp
src/util/: cfunctions.c  cfunctions.h  misc.h  rgb.h
