[package]
name = "deluge-fft"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Expose the test-only reference DFT and round-trip helpers.
test-utils = []
# Include CMSIS-DSP reference benchmarks (requires arm-linux-gnueabihf C toolchain).
cmsis-bench = ["cmsis-dsp"]

[dependencies]
# CMSIS-DSP reference (compiled C, NEON-accelerated on ARM). Enable with --features cmsis-bench.
cmsis-dsp = { path = "../cmsis-dsp", optional = true }

[dev-dependencies]
# For host-side unit tests only — not pulled in for no-std targets.
approx = "0.5"
# Benchmark harness.
criterion = { version = "0.5", features = ["html_reports"] }
# Reference implementation to compare against.
rustfft = "6"

[[bench]]
name = "fft_bench"
harness = false
