[workspace]
# Standalone workspace — does NOT inherit the armv7a-none-eabihf target from
# rust/.cargo/config.toml.  Builds a native (host) binary.

[package]
name = "deluge-test-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deluge-test-runner"
path = "src/main.rs"

[dependencies]
anyhow  = "1"
clap    = { version = "4", features = ["derive"] }
object  = { version = "0.39", default-features = false, features = ["elf", "read_core", "std"] }
