[package]
name = "deluge-firmware"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deluge-firmware"
test = false

[dependencies]
rza1 = { path = "../rza1" }
deluge-bsp = { path = "../deluge-bsp" }
cortex-ar = "0.3"
embassy-executor = { version = "0.10", features = ["nightly", "platform-cortex-ar", "executor-thread"] }
embassy-time = { version = "0.5", features = ["tick-hz-1_000_000"] }
embassy-sync = "0.8"
embassy-usb = "0.6"
rtt-target = { version = "0.6", features = ["log"] }
log = "0.4.29"
embassy-futures = "0.1"
