[package]
name = "rza1"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
# Unit tests (in #[cfg(all(test, not(target_os="none")))]) run natively via
# `cargo test` (host target). They cannot compile for armv7a-none-eabihf
# because the `test` crate requires std.
test = false

# On-device integration tests — probe-rs flashes and runs these.
# harness=false disables the std test harness (incompatible with no_std);
# embedded-test provides its own entry point via the startup in rza1.
[[test]]
name = "ostm"
harness = false

[[test]]
name = "gic"
harness = false

[target.'cfg(target_os = "none")'.dependencies]
cortex-ar = { version = "0.3", features = ["critical-section-single-core"] }

[dependencies]
critical-section = "1"
embassy-sync = "0.8"
embassy-time-driver = "0.2"
embassy-time-queue-utils = "0.3"
embedded-hal = "1"
embedded-hal-async = "1"
embedded-io-async = "0.7"

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
critical-section = { version = "1", features = ["std"] }

[target.'cfg(target_os = "none")'.dev-dependencies]
deluge-test = { path = "../deluge-test" }
rtt-target = "0.6"
cortex-ar = "0.3"

[[example]]
name = "ostm-smoke"
harness = false
